Replacing old variable names

--- a/colors/index.html
+++ b/colors/index.html
@@ -55,9 +55,9 @@
 									<li><strong>WordPress.com Blue</strong></li>
 									<li>#0087be</li>
 									<li>rgb(0,135,190)</li>
-									<li>$wordpress-blue</li>
+									<li>$blue-wordpress</li>
 									<!--
-									<li>$wordpress-blue</li>
+									<li>$blue-wordpress</li>
 									<li>PMS 7460</li>
 									<li>CMYK (Coated) 100, 6, 2, 10</li>
 									<li>CMYK (Uncoated) 100, 0, 10, 0</li>
@@ -77,7 +77,7 @@
 									<li><strong>Light Blue</strong></li>
 									<li>#78dcfa</li>
 									<li>rgb(120,220,250)</li>
-									<li>$light-blue</li>
+									<li>$blue-light</li>
 								</ul>
 							</div>
 
@@ -86,7 +86,7 @@
 									<li><strong>Medium Blue</strong></li>
 									<li>#00aadc</li>
 									<li>rgba(0,170,220)</li>
-									<li>$medium-blue</li>
+									<li>$blue-medium</li>
 								</ul>
 							</div>
 
@@ -95,7 +95,7 @@
 									<li><strong>Dark Blue</strong></li>
 									<li>#005082</li>
 									<li>rgb(0,80,130)</li>
-									<li>$dark-blue</li>
+									<li>$blue-dark</li>
 								</ul>
 							</div>
 						</section>
@@ -209,7 +209,7 @@
 									<li><strong>Fire Orange</strong></li>
 									<li>#d54e21</li>
 									<li>rgb(213,78,33)</li>
-									<li>$fire-orange</li>
+									<li>$orange-fire</li>
 								</ul>
 							</div>
 
@@ -218,7 +218,7 @@
 									<li><strong>Jazzy Orange</strong></li>
 									<li>#f0821e</li>
 									<li>rgb(240,130,30)</li>
-									<li>$jazzy-orange</li>
+									<li>$orange-jazzy</li>
 								</ul>
 							</div>
 						</section>
