--- a/colors/index.html
+++ b/colors/index.html
@@ -54,14 +54,13 @@
 								<ul class="swatch-details">
 									<li><strong>WordPress.com Blue</strong></li>
 									<li>#0087be</li>
-									<li>rgb( 0,135,190 )</li>
+									<li>rgb( 0, 135, 190 )</li>
 									<li>$blue-wordpress</li>
-									<!--
-									<li>$blue-wordpress</li>
-									<li>PMS 7460</li>
-									<li>CMYK (Coated) 100, 6, 2, 10</li>
-									<li>CMYK (Uncoated) 100, 0, 10, 0</li>
-									-->
+									<li>PMS 7461 C</li>
+									<li>PMS 2995 U</li>
+									<!-- <li>PMS 7689 c</li>
+									<li>PMS  U</li>
+									<li>PMS  C</li> -->
 								</ul>
 							</div>
 						</section>
@@ -76,8 +75,12 @@
 								<ul class="swatch-details">
 									<li><strong>Light Blue</strong></li>
 									<li>#78dcfa</li>
-									<li>rgb( 120,220,250 )</li>
+									<li>rgb( 120, 220, 250 )</li>
 									<li>$blue-light</li>
+									<li>PMS 2975 C</li>
+									<li>PMS 2975 U</li>
+									<!-- <li>PMS 297 U</li>
+									<li>PMS 297 C</li> -->
 								</ul>
 							</div>
 
@@ -85,8 +88,12 @@
 								<ul class="swatch-details">
 									<li><strong>Medium Blue</strong></li>
 									<li>#00aadc</li>
-									<li>rgba( 0,170,220 )</li>
+									<li>rgba( 0, 170, 220 )</li>
 									<li>$blue-medium</li>
+									<li>PMS 2995 C</li>
+									<li>PMS 306 U</li>
+									<!-- 
+									<li>PMS 638 C</li> -->
 								</ul>
 							</div>
 
@@ -94,8 +101,10 @@
 								<ul class="swatch-details">
 									<li><strong>Dark Blue</strong></li>
 									<li>#005082</li>
-									<li>rgb( 0,80,130 )</li>
+									<li>rgb( 0, 80, 130 )</li>
 									<li>$blue-dark</li>
+									<li>PMS 7462 C</li>
+									<li>PMS 2945 U</li>
 								</ul>
 							</div>
 						</section>
@@ -109,10 +118,11 @@
 							<div class="swatch gray">
 								<ul class="swatch-details">
 									<li><strong>Gray</strong></li>
-									<!-- <li><small>middle of the road gray</small></li> -->
 									<li>#87a6bc</li>
-									<li>rgb( 135,166,188 )</li>
+									<li>rgb( 135, 166, 188 )</li>
 									<li>$gray</li>
+									<li>PMS 542 C</li>
+									<li>PMS 543 U</li>
 								</ul>
 							</div>
 						</section>
@@ -120,9 +130,8 @@
 							<div class="swatch gray-light">
 								<ul class="swatch-details">
 									<li><strong>Gray Light</strong></li>
-									<!-- <li><small>ultra light</small></li> -->
 									<li>#f3f6f8</li>
-									<li>rgb( 243,246,248 )</li>
+									<li>rgb( 243, 246, 248 )</li>
 									<li>$gray-light</li>
 								</ul>
 							</div>
@@ -130,69 +139,62 @@
 							<div class="swatch gray-lighten-30">
 								<ul class="swatch-details">
 									<li><strong>Gray Lighten 30</strong></li>
-									<!-- <li><small>page background</small></li> -->
 									<li>#e9eff3</li>
-									<li>rgb( 233,239,243 )</li>
-									<li>lighten( $gray,30 )</li>
+									<li>rgb( 233, 239, 243 )</li>
+									<li>lighten( $gray, 30% )</li>
 								</ul>
 							</div>
 							
 							<div class="swatch gray-lighten-20">
 								<ul class="swatch-details">
 									<li><strong>Gray Lighten 20</strong></li>
-									<!-- <li><small>sidebar background</small></li> -->
 									<li>#c8d7e1</li>
-									<li>rgb( 200,215,225 )</li>
-									<li>lighten( $gray,20 )</li>
+									<li>rgb( 200, 215, 225 )</li>
+									<li>lighten( $gray, 20% )</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-lighten-10">
 								<ul class="swatch-details">
 									<li><strong>Gray Lighten 10</strong></li>
-									<!-- <li><small>body background</small></li> -->
 									<li>#a8bece</li>
-									<li>rgb( 168,190,206 )</li>
-									<li>lighten( $gray,10 )</li>
+									<li>rgb( 168, 190, 206 )</li>
+									<li>lighten( $gray, 10% )</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-darken-10">
 								<ul class="swatch-details">
 									<li><strong>Gray Darken 10</strong></li>
-									<!-- <li><small>shadows and rules</small></li> -->
 									<li>#668eaa</li>
-									<li>rgb( 102,142,170 )</li>
-									<li>darken( $gray,10 )</li>
+									<li>rgb( 102, 142, 170 )</li>
+									<li>darken( $gray, 10% )</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-darken-20">
 								<ul class="swatch-details">
 									<li><strong>Gray Darken 20</strong></li>
-									<!-- <li><small>text</small></li> -->
 									<li>#4f748e</li>
-									<li>rgb( 79,116,142 )</li>
-									<li>darken( $gray,20 )</li>
+									<li>rgb( 79, 116, 142 )</li>
+									<li>darken( $gray, 20% )</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-darken-30">
 								<ul class="swatch-details">
 									<li><strong>Gray Darken 30</strong></li>
-									<!-- <li><small>text</small></li> -->
 									<li>#3d596d</li>
-									<li>rgb( 61,89,109 )</li>
-									<li>darken( $gray,30 )</li>
+									<li>rgb( 61, 89, 109 )</li>
+									<li>darken( $gray, 30% )</li>
 								</ul>
 							</div>
 
 							<div class="swatch gray-dark">
 								<ul class="swatch-details">
 									<li><strong>Gray Dark</strong></li>
-									<!-- <li><small>text</small></li> -->
 									<li>#2e4453</li>
-									<li>rgb( 46,68,83 )</li>
+									<li>rgb( 46, 68, 83 )</li>
 									<li>$gray-dark</li>
 								</ul>
 							</div>
@@ -208,8 +210,10 @@
 								<ul class="swatch-details">
 									<li><strong>Fire Orange</strong></li>
 									<li>#d54e21</li>
-									<li>rgb( 213,78,33 )</li>
+									<li>rgb( 213, 78, 33 )</li>
 									<li>$orange-fire</li>
+									<li>PMS 1665 C</li>
+									<li>PMS 1665 U</li>
 								</ul>
 							</div>
 
@@ -217,8 +221,10 @@
 								<ul class="swatch-details">
 									<li><strong>Jazzy Orange</strong></li>
 									<li>#f0821e</li>
-									<li>rgb( 240,130,30 )</li>
+									<li>rgb( 240, 130, 30 )</li>
 									<li>$orange-jazzy</li>
+									<li>PMS 715 C</li>
+									<li>PMS 130 U</li>
 								</ul>
 							</div>
 						</section>
@@ -233,7 +239,7 @@
 								<ul class="swatch-details">
 									<li><strong>Valid Green</strong></li>
 									<li>#4ab866</li>
-									<li>rgb( 74,184,102 )</li>
+									<li>rgb( 74, 184, 102 )</li>
 									<li>$alert-green</li>
 								</ul>
 							</div>
@@ -242,7 +248,7 @@
 								<ul class="swatch-details">
 									<li><strong>Warning Yellow</strong></li>
 									<li>#f0b849</li>
-									<li>rgb( 240,184,73 )</li>
+									<li>rgb( 240, 184, 73 )</li>
 									<li>$alert-yellow</li>
 								</ul>
 							</div>
@@ -251,7 +257,7 @@
 								<ul class="swatch-details">
 									<li><strong>Error Red</strong></li>
 									<li>#d94f4f</li>
-									<li>rgb( 217,79,79 )</li>
+									<li>rgb( 217, 79, 79 )</li>
 									<li>$alert-red</li>
 								</ul>
 							</div>
