adding links to contrast check

--- a/colors/index.html
+++ b/colors/index.html
@@ -52,7 +52,7 @@
 						<section class="swatches col-1">
 							<div class="swatch wpcom-blue">
 								<ul class="swatch-details">
-									<li><strong>WordPress.com Blue</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=0087BE,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Text Color Contrast Check" target="_blank"></a></li>
+									<li><strong>WordPress.com Blue</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=0087BE,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#0087be</li>
 									<li>rgb( 0, 135, 190 )</li>
 									<li>$blue-wordpress</li>
@@ -73,7 +73,7 @@
 						<section class="swatches col-3">
 							<div class="swatch light-blue">
 								<ul class="swatch-details">
-									<li><strong>Light Blue</strong></li>
+									<li><strong>Light Blue</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=78dcfa,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#78dcfa</li>
 									<li>rgb( 120, 220, 250 )</li>
 									<li>$blue-light</li>
@@ -86,7 +86,7 @@
 
 							<div class="swatch medium-blue">
 								<ul class="swatch-details">
-									<li><strong>Medium Blue</strong></li>
+									<li><strong>Medium Blue</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=00aadc,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#00aadc</li>
 									<li>rgba( 0, 170, 220 )</li>
 									<li>$blue-medium</li>
@@ -99,7 +99,7 @@
 
 							<div class="swatch dark-blue">
 								<ul class="swatch-details">
-									<li><strong>Dark Blue</strong></li>
+									<li><strong>Dark Blue</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=005082,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#005082</li>
 									<li>rgb( 0, 80, 130 )</li>
 									<li>$blue-dark</li>
@@ -117,7 +117,7 @@
 						<section class="swatches col-1">
 							<div class="swatch gray">
 								<ul class="swatch-details">
-									<li><strong>Gray</strong></li>
+									<li><strong>Gray</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=87a6bc,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#87a6bc</li>
 									<li>rgb( 135, 166, 188 )</li>
 									<li>$gray</li>
@@ -129,7 +129,7 @@
 						<section class="swatches col-4">
 							<div class="swatch gray-light">
 								<ul class="swatch-details">
-									<li><strong>Gray Light</strong></li>
+									<li><strong>Gray Light</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=f3f6f8,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#f3f6f8</li>
 									<li>rgb( 243, 246, 248 )</li>
 									<li>$gray-light</li>
@@ -138,7 +138,7 @@
 							
 							<div class="swatch gray-lighten-30">
 								<ul class="swatch-details">
-									<li><strong>Gray Lighten 30</strong></li>
+									<li><strong>Gray Lighten 30</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=e9eff3,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#e9eff3</li>
 									<li>rgb( 233, 239, 243 )</li>
 									<li>lighten( $gray, 30% )</li>
@@ -147,7 +147,7 @@
 							
 							<div class="swatch gray-lighten-20">
 								<ul class="swatch-details">
-									<li><strong>Gray Lighten 20</strong></li>
+									<li><strong>Gray Lighten 20</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=c8d7e1,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#c8d7e1</li>
 									<li>rgb( 200, 215, 225 )</li>
 									<li>lighten( $gray, 20% )</li>
@@ -156,7 +156,7 @@
 
 							<div class="swatch gray-lighten-10">
 								<ul class="swatch-details">
-									<li><strong>Gray Lighten 10</strong></li>
+									<li><strong>Gray Lighten 10</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=a8bece,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#a8bece</li>
 									<li>rgb( 168, 190, 206 )</li>
 									<li>lighten( $gray, 10% )</li>
@@ -165,7 +165,7 @@
 
 							<div class="swatch gray-darken-10">
 								<ul class="swatch-details">
-									<li><strong>Gray Darken 10</strong></li>
+									<li><strong>Gray Darken 10</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=668eaa,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#668eaa</li>
 									<li>rgb( 102, 142, 170 )</li>
 									<li>darken( $gray, 10% )</li>
@@ -174,7 +174,7 @@
 
 							<div class="swatch gray-darken-20">
 								<ul class="swatch-details">
-									<li><strong>Gray Darken 20</strong></li>
+									<li><strong>Gray Darken 20</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=4f748e,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#4f748e</li>
 									<li>rgb( 79, 116, 142 )</li>
 									<li>darken( $gray, 20% )</li>
@@ -183,7 +183,7 @@
 
 							<div class="swatch gray-darken-30">
 								<ul class="swatch-details">
-									<li><strong>Gray Darken 30</strong></li>
+									<li><strong>Gray Darken 30</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=3d596d,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#3d596d</li>
 									<li>rgb( 61, 89, 109 )</li>
 									<li>darken( $gray, 30% )</li>
@@ -192,7 +192,7 @@
 
 							<div class="swatch gray-dark">
 								<ul class="swatch-details">
-									<li><strong>Gray Dark</strong></li>
+									<li><strong>Gray Dark</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=2e4453,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#2e4453</li>
 									<li>rgb( 46, 68, 83 )</li>
 									<li>$gray-dark</li>
@@ -208,7 +208,7 @@
 						<section class="swatches col-2">
 							<div class="swatch fire-orange">
 								<ul class="swatch-details">
-									<li><strong>Fire Orange</strong></li>
+									<li><strong>Fire Orange</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=d54e21,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#d54e21</li>
 									<li>rgb( 213, 78, 33 )</li>
 									<li>$orange-fire</li>
@@ -219,7 +219,7 @@
 
 							<div class="swatch jazzy-orange">
 								<ul class="swatch-details">
-									<li><strong>Jazzy Orange</strong></li>
+									<li><strong>Jazzy Orange</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=f0821e,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#f0821e</li>
 									<li>rgb( 240, 130, 30 )</li>
 									<li>$orange-jazzy</li>
@@ -237,7 +237,7 @@
 						<section class="swatches col-3">
 							<div class="swatch valid-green">
 								<ul class="swatch-details">
-									<li><strong>Valid Green</strong></li>
+									<li><strong>Valid Green</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=4ab866,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#4ab866</li>
 									<li>rgb( 74, 184, 102 )</li>
 									<li>$alert-green</li>
@@ -246,7 +246,7 @@
 
 							<div class="swatch warning-yellow">
 								<ul class="swatch-details">
-									<li><strong>Warning Yellow</strong></li>
+									<li><strong>Warning Yellow</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=f0b849,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#f0b849</li>
 									<li>rgb( 240, 184, 73 )</li>
 									<li>$alert-yellow</li>
@@ -255,7 +255,7 @@
 
 							<div class="swatch error-red">
 								<ul class="swatch-details">
-									<li><strong>Error Red</strong></li>
+									<li><strong>Error Red</strong><a href="http://snook.ca/technical/colour_contrast/colour.html#fg=d94f4f,bg=FFFFFF" class="contrast-check noticon noticon-fonts" title="Color Contrast Check" target="_blank"></a></li>
 									<li>#d94f4f</li>
 									<li>rgb( 217, 79, 79 )</li>
 									<li>$alert-red</li>
