--- a/iconography/index.html
+++ b/iconography/index.html
@@ -45,7 +45,7 @@
 						<p>Icons carry a tremendous weight in conveying branding and design language. They give a UI its most recognizable elements of identity when used correctly.</p>
 					</header>
 
-					<p>Right now we are in flux as we build Gridicons, an evolved icon set for WordPress.com. These are the icon sets currently available:</p>
+					<p>Right now we are in flux as we build <a href="https://github.com/Automattic/Gridicons">Gridicons</a>, an evolved icon set for WordPress.com. These are the icon sets currently available:</p>
 
 					<ul>
 						<li><a href="http://wordpress.com/i/noticons/example.html">Noticons</a> (from <em>&ldquo;notification icons&rdquo;</em>) is our WordPress.com icon font. It contains every icon &ldquo;Genericons&rdquo; has, plus some that are specific to WordPress.com. You can use Genericons for themes and other projects. <strong>(Please do not use Noticons outside of their intended 16px font-size or 2x multiples thereof (32px, 64px). Even fonts look fuzzy outside of their pixel grid.)</strong></li>
@@ -53,7 +53,6 @@
 						<li><a href="https://developer.wordpress.org/resource/dashicons/">Dashicons</a> is the official icon font of the WordPress admin. It should only be used within /wp-admin/.</li>
 					</ul>
 
-					<p>If you&rsquo;d like to join the icon revolution, head over to the <a href="https://github.com/Automattic/Gridicons">Gridicons GitHub repo</a>, where the future of the WordPress.com icons is being crafted.</p>
 
 				</article>
 				<nav id="page-navigation" class="page-links">
